# connect4

./: CMakeLists.txt  Makefile  README.md  board.cc  board.cc~  board.h  board.h~  connect4  engine.cc  engine.cc~  game.cc  game.cc~  test.cc
include/: C4BoardCell.h  C4BoardInterface.h  C4BoardState.h  Connect4Engine.h  Connect4Game.h  Game.h  board.h  engine.h
src/: C4BoardCell.cpp  C4BoardInterface.cc  C4BoardPrinter.cc  C4BoardState.cpp  Connect4Engine.cc  Connect4GameRunner.cc  Game.cc  board.cc  boardPrinter.cc  engine.cc  gameRunner.cc
